--- a/snips-nlu-lib/Cargo.toml
+++ b/snips-nlu-lib/Cargo.toml
@@ -12,7 +12,7 @@ description = "Rust implementation of Snips NLU"
 edition = "2018"
 
 [dependencies]
-crfsuite = { git = "https://github.com/snipsco/crfsuite-rs", rev = "e09aa13" }
+crfsuite = { version = "0.3", git = "https://github.com/snipsco/crfsuite-rs", tag = "0.3.0" }
 snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.62.0" }
 snips-nlu-ontology-parsers = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.62.0" }
 snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.7.0" }
